# ekiga-3.2.7

./: AUTHORS  ChangeLog  Doxyfile.in  FAQ  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README.txt  TODO  aclocal.m4  config.h.in  configure  configure.ac  ekiga.desktop  ekiga.desktop.in.in  ekiga.schemas  ekiga.schemas.in.in
help/: ChangeLog  Makefile.am  Makefile.in  ekiga.omf.in
help/C/: ekiga.xml
help/bg/: bg.po  ekiga.xml
help/ca/: ca.po  ekiga.xml
help/de/: de.po  ekiga.xml
help/el/: ekiga.xml  el.po
help/en_GB/: ekiga.xml  en_GB.po
help/es/: ekiga.xml  es.po
help/eu/: ekiga.xml  eu.po
help/fi/: ekiga.xml  fi.po
help/fr/: ekiga.xml  fr.po
help/oc/: ekiga.xml  oc.po
help/pt_BR/: ekiga.xml  pt_BR.po
help/ru/: ekiga.xml  ru.po
help/sv/: ekiga.xml  sv.po
help/uk/: ekiga.xml  uk.po
lib/: Makefile.am  Makefile.in  gmmarshallers.c  gmmarshallers.h  gmmarshallers.list
lib/engine/: Makefile.am  Makefile.in  engine.cpp  engine.h
lib/engine/account/: Makefile.am  Makefile.in  account-core.cpp  account-core.h  account.h  bank-impl.h  bank.h
lib/engine/addressbook/: Makefile.am  Makefile.in  book-impl.h  book.h  contact-core.cpp  contact-core.h  contact.h  source-impl.h  source.h
lib/engine/audioinput/: Makefile.am  Makefile.in  audioinput-core.cpp  audioinput-core.h  audioinput-gmconf-bridge.cpp  audioinput-gmconf-bridge.h  audioinput-info.h  audioinput-manager.h
lib/engine/audiooutput/: Makefile.am  Makefile.in  audiooutput-core.cpp  audiooutput-core.h  audiooutput-gmconf-bridge.cpp  audiooutput-gmconf-bridge.h  audiooutput-info.h  audiooutput-manager.h  audiooutput-scheduler.cpp  audiooutput-scheduler.h
lib/engine/chat/: Makefile.am  Makefile.in  chat-core.cpp  chat-core.h  chat-multiple.h  chat-simple.h  chat.h  dialect-impl.h  dialect.h
lib/engine/components/: Makefile.am  Makefile.in
lib/engine/components/avahi/: Makefile.am  Makefile.in  avahi-cluster.cpp  avahi-cluster.h  avahi-heap.cpp  avahi-heap.h  avahi-main.cpp  avahi-main.h
lib/engine/components/avahi-publisher/: Makefile.am  Makefile.in  avahi-publisher-main.cpp  avahi-publisher-main.h  avahi-publisher.cpp  avahi-publisher.h
lib/engine/components/call-history/: Makefile.am  Makefile.in  history-book.cpp  (+7 more)
lib/engine/framework/: Makefile.am  Makefile.in  chain-of-responsibility.h  device-def.h  form-builder.cpp  form-builder.h  form-dumper.cpp  form-dumper.h  form-request-simple.cpp  form-request-simple.h  form-request.h  form-visitor.h  form.cpp  form.h  gmconf-bridge.cpp  gmconf-bridge.h  gmref.h  kickstart.cpp  kickstart.h  lister.h  map-key-const-iterator.h  map-key-iterator.h  menu-builder-tools.cpp  menu-builder-tools.h  menu-builder.cpp  menu-builder.h  menu-xml.cpp  menu-xml.h  personal-details.h  ptr_array.h  ptr_array_const_iterator.h  ptr_array_iterator.h  reflister.h  robust-xml.cpp  robust-xml.h  runtime-glib.cpp  runtime.h  services.cpp  services.h  trigger.h
lib/engine/gui/: Makefile.am  Makefile.in
lib/engine/hal/: Makefile.am  Makefile.in  hal-core.cpp  hal-core.h  hal-manager.h
lib/engine/notification/: Makefile.am  Makefile.in  notification-core.h  notification-dummy.cpp
lib/engine/plugin/: Makefile.am  Makefile.in  plugin-core.cpp  plugin-core.h
lib/engine/presence/: Makefile.am  Makefile.in  cluster-impl.h  cluster.h  heap-impl.h  heap.h  presence-core.cpp  presence-core.h  presentity.h  proxy-presentity.cpp  proxy-presentity.h  uri-presentity.cpp  uri-presentity.h
lib/engine/protocol/: Makefile.am  Makefile.in  call-core.cpp  call-core.h  call-manager.cpp  call-manager.h  call-protocol-manager.h  call.h  codec-description.cpp  codec-description.h
lib/engine/videoinput/: Makefile.am  Makefile.in  videoinput-core.cpp  videoinput-core.h  videoinput-gmconf-bridge.cpp  videoinput-gmconf-bridge.h  videoinput-info.h  videoinput-manager.h
lib/engine/videooutput/: Makefile.am  Makefile.in  videooutput-core.cpp  videooutput-core.h  videooutput-gmconf-bridge.cpp  videooutput-gmconf-bridge.h  videooutput-info.h  videooutput-manager.h
lib/gmconf/: Makefile.am  Makefile.in  gmconf-gconf.c  gmconf-glib.c  gmconf.h
lib/gui/: Makefile.am  Makefile.in  codecsbox.cpp  codecsbox.h  dxwindow.cpp  dxwindow.h  gm-cell-renderer-bitext.c  gm-cell-renderer-bitext.h  gm-smiley-chooser-button.c  gm-smiley-chooser-button.h  gm-smileys.c  gm-smileys.h  gm-text-anchored-tag.c  gm-text-anchored-tag.h  gm-text-buffer-enhancer-helper-iface.c  gm-text-buffer-enhancer-helper-iface.h  gm-text-buffer-enhancer.c  gm-text-buffer-enhancer.h  gm-text-extlink.c  gm-text-extlink.h  gm-text-smiley.c  gm-text-smiley.h  gmcellrendererexpander.c  gmcellrendererexpander.h  gmconfwidgets.c  gmconfwidgets.h  gmconnectbutton.c  gmconnectbutton.h  gmdialog.c  gmdialog.h  gmentrydialog.c  gmentrydialog.h  gmlevelmeter.c  gmlevelmeter.h  gmmenuaddon.c  gmmenuaddon.h  gmpowermeter.c  gmpowermeter.h  gmpreferences.c  gmpreferences.h  (+10 more)
lib/pixops/: Makefile.am  Makefile.in  composite_line_22_4a4_mmx.S  composite_line_color_22_4a4_mmx.S  have_mmx.S  pixops-internal.h  pixops.c  pixops.h  scale_line_22_33_mmx.S  timescale.c
lib/platform/: Makefile.am  Makefile.in  gm-platform.h  platform-generic.c  platform-win32.c  winpaths.h
lib/toolbox/: Makefile.am  Makefile.in  toolbox-common.c  toolbox-gnome.c  toolbox-gtk.c  toolbox-internal.c  toolbox-internal.h  toolbox-win32.c  toolbox.h
pixmaps/: Makefile.am  Makefile.in  gm_powermeter_default_00.xpm  gm_powermeter_default_01.xpm  gm_powermeter_default_02.xpm  gm_powermeter_default_03.xpm  gm_powermeter_default_04.xpm  icon.h
src/: Makefile.am  Makefile.in  common.h  ekiga-config-tool.in  ekiga-debug-analyser  ekiga.cpp  ekiga.h
src/dbus-helper/: dbus-helper-stub.xml  dbus-helper.cpp  dbus-stub.xml  dbus.cpp  dbus.h  org.ekiga.Ekiga.service.in  org.ekiga.Helper.service.in
src/gui/: accounts.cpp  accounts.h  assistant.cpp  assistant.h  callbacks.cpp  callbacks.h  conf.cpp  conf.h  dialpad.cpp  dialpad.h  main.cpp  main.h  misc.cpp  misc.h  preferences.cpp  preferences.h  statusicon.cpp  statusicon.h  statusmenu.cpp  statusmenu.h
(+338 files in other folders)
